browse event page

--- a/Admin_panel/src/views/pages/dashboard/index.hbs
+++ b/Admin_panel/src/views/pages/dashboard/index.hbs
@@ -1,218 +1,1 @@
-<div class="c-subheader justify-content-between px-3">
-
-    <ol class="breadcrumb border-0 m-0 px-0 px-md-3">
-        <li class="breadcrumb-item">Home</li>
-    </ol>
-</div>
-<main class="c-main">
-    <div class="container-fluid">
-        <div id="ui-view">
-            <div>
-                <div class="fade-in">
-                    <div class="row">
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="card text-white bg-gradient-primary">
-                                <div class="card-body card-body pb-0 d-flex justify-content-between align-items-start">
-                                    <div>
-                                        <div class="text-value-lg">122</div>
-                                        <div>Members </div>
-                                    </div>
-                                </div>
-                                <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-                                    <div class="chartjs-size-monitor">
-                                        <div class="chartjs-size-monitor-expand">
-                                            <div class=""></div>
-                                        </div>
-                                        <div class="chartjs-size-monitor-shrink">
-                                            <div class=""></div>
-                                        </div>
-                                    </div>
-                                    <canvas class="chart chartjs-render-monitor" id="card-chart1" height="70"
-                                        style="display: block; width: 128px; height: 70px;" width="128"></canvas>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="card text-white bg-gradient-info">
-                                <div class="card-body card-body pb-0 d-flex justify-content-between align-items-start">
-                                    <div>
-                                        <div class="text-value-lg">12</div>
-                                        <div>Staff</div>
-                                    </div>
-                                </div>
-                                <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-                                    <div class="chartjs-size-monitor">
-                                        <div class="chartjs-size-monitor-expand">
-                                            <div class=""></div>
-                                        </div>
-                                        <div class="chartjs-size-monitor-shrink">
-                                            <div class=""></div>
-                                        </div>
-                                    </div>
-                                    <canvas class="chart chartjs-render-monitor" id="card-chart2" height="70"
-                                        width="128" style="display: block; width: 128px; height: 70px;"></canvas>
-                                    <div id="card-chart2-tooltip" class="c-chartjs-tooltip top"
-                                        style="opacity: 0; left: 74.0016px; top: 115.661px;">
-                                        <div class="c-tooltip-header">
-                                            <div class="c-tooltip-header-item">February</div>
-                                        </div>
-                                        <div class="c-tooltip-body">
-                                            <div class="c-tooltip-body-item"><span class="c-tooltip-body-item-color"
-                                                    style="background-color: rgb(51, 153, 255);"></span><span
-                                                    class="c-tooltip-body-item-label">My First dataset</span><span
-                                                    class="c-tooltip-body-item-value">18</span></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="card text-white bg-gradient-warning">
-                                <div class="card-body card-body pb-0 d-flex justify-content-between align-items-start">
-                                    <div>
-                                        <div class="text-value-lg">32</div>
-                                        <div>Teams</div>
-                                    </div>
-                                </div>
-                                <div class="c-chart-wrapper mt-3" style="height:70px;">
-                                    <div class="chartjs-size-monitor">
-                                        <div class="chartjs-size-monitor-expand">
-                                            <div class=""></div>
-                                        </div>
-                                        <div class="chartjs-size-monitor-shrink">
-                                            <div class=""></div>
-                                        </div>
-                                    </div>
-                                    <canvas class="chart chartjs-render-monitor" id="card-chart3" height="70"
-                                        width="160" style="display: block; width: 160px; height: 70px;"></canvas>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="card text-white bg-gradient-danger">
-                                <div class="card-body card-body pb-0 d-flex justify-content-between align-items-start">
-                                    <div>
-                                        <div class="text-value-lg">53</div>
-                                        <div>projects</div>
-                                    </div>
-                                </div>
-                                <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-                                    <div class="chartjs-size-monitor">
-                                        <div class="chartjs-size-monitor-expand">
-                                            <div class=""></div>
-                                        </div>
-                                        <div class="chartjs-size-monitor-shrink">
-                                            <div class=""></div>
-                                        </div>
-                                    </div>
-                                    <canvas class="chart chartjs-render-monitor" id="card-chart4" height="70"
-                                        width="128" style="display: block; width: 128px; height: 70px;"></canvas>
-                                    <div id="card-chart4-tooltip" class="c-chartjs-tooltip top"
-                                        style="opacity: 0; left: 240.315px; top: 111.1px;">
-                                        <div class="c-tooltip-header">
-                                            <div class="c-tooltip-header-item">March</div>
-                                        </div>
-                                        <div class="c-tooltip-body">
-                                            <div class="c-tooltip-body-item"><span class="c-tooltip-body-item-color"
-                                                    style="background-color: rgba(255, 255, 255, 0.2);"></span><span
-                                                    class="c-tooltip-body-item-label">My First dataset</span><span
-                                                    class="c-tooltip-body-item-value">67</span></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-
-         
-                    
-<main class="c-main">
-    <div class="container-fluid">
-        <div id="ui-view">
-            <div>
-                <link href="/coreui/vendors/@coreui/chartjs/css/coreui-chartjs.css" rel="stylesheet">
-
-
-                <div class="fade-in">
-                    <div class="card-columns cols-2">
-
-                        <div class="card">
-                            <div class="card-header">Last Five Projects
-                            </div>
-                            <div class="card-body">
-                                <div class="c-chart-wrapper">
-                                    <div class="chartjs-size-monitor">
-                                        <div class="chartjs-size-monitor-expand">
-                                            <div class=""></div>
-                                        </div>
-                                        <div class="chartjs-size-monitor-shrink">
-                                            <div class=""></div>
-                                        </div>
-                                    </div>
-
-                                    <table class="table table-responsive-sm table-bordered">
-                                        <thead>
-                                            <tr>
-                                                <th>Name</th>
-                                                <th>Date Created</th>
-                                                <th>Type</th>
-                                                <th>Status</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>NNN</td>
-                                                <td>1/9/2019</td>
-                                                <td>groups</td>
-                                                <td><span class="badge badge-success">finished</span></td>
-                                            </tr>
-                                            <tr>
-                                                <td>bingo</td>
-                                                <td>0000000</td>
-                                                <td>group</td>
-                                                <td><span class="badge badge-danger">stopped</span></td>
-                                            </tr>
-                                            
-                                        
-                                        </tbody>
-                                    </table>
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card-header">
-                                Projects Status Pie Chart
-                            </div>
-                            <div class="card-body">
-                                <div class="c-chart-wrapper">
-                                    <div class="chartjs-size-monitor">
-                                        <div class="chartjs-size-monitor-expand">
-                                            <div class=""></div>
-                                        </div>
-                                        <div class="chartjs-size-monitor-shrink">
-                                            <div class=""></div>
-                                        </div>
-                                    </div>
-                                    <canvas id="canvas-5" width="287" height="143" class="chartjs-render-monitor"
-                                        style="display: block;"></canvas>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-
+{{>homemap}}
