--- a/Admin_panel/src/views/partials/sidenavbar.hbs
+++ b/Admin_panel/src/views/partials/sidenavbar.hbs
@@ -13,15 +13,15 @@
                     <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
                 </svg> Home<span class="badge badge-info">NEW</span></a></li>
         <li class="c-sidebar-nav-title">INFO</li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/user">
+        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/events">
                 <svg class="c-sidebar-nav-icon">
                     <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-star"></use>
                 </svg> Events</a></li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/staff">
                 <svg class="c-sidebar-nav-icon">
                     <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-puzzle"></use>
-                </svg> Users</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/">
+                </svg> Actions</a></li>
+        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/contactus">
                 <svg class="c-sidebar-nav-icon">
                     <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
                 </svg> Contact us</a></li>
