--- a/Admin_panel/src/public/scss/app.css
+++ b/Admin_panel/src/public/scss/app.css
@@ -2,7 +2,8 @@
   border: none !important;
 }
 
-.pseu-tabs .nav-tabs .nav-link.active, .pseu-tabs .tab-content {
+.pseu-tabs .nav-tabs .nav-link.active,
+.pseu-tabs .tab-content {
   border: 0px solid transparent;
 }
 
@@ -12,7 +13,7 @@
 
 .header-2 {
   -webkit-box-shadow: 0 2px 2px 0 rgba(60, 75, 100, 0.14), 0 3px 1px -2px rgba(60, 75, 100, 0.12), 0 1px 5px 0 rgba(60, 75, 100, 0.2);
-          box-shadow: 0 2px 2px 0 rgba(60, 75, 100, 0.14), 0 3px 1px -2px rgba(60, 75, 100, 0.12), 0 1px 5px 0 rgba(60, 75, 100, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(60, 75, 100, 0.14), 0 3px 1px -2px rgba(60, 75, 100, 0.12), 0 1px 5px 0 rgba(60, 75, 100, 0.2);
   min-height: auto;
   position: -webkit-sticky;
   position: sticky;
@@ -27,7 +28,7 @@
   padding: 20px;
   background: white;
   -webkit-box-shadow: 0 4px 18px rgba(0, 0, 0, 0.16);
-          box-shadow: 0 4px 18px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 4px 18px rgba(0, 0, 0, 0.16);
 }
 
 .login-page {
@@ -45,11 +46,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .login-page .white-panel {
@@ -58,7 +59,7 @@
   border-radius: 10px;
 }
 
-.login-page .white-panel .row > div:first-child {
+.login-page .white-panel .row>div:first-child {
   border-right: 1px solid #707070;
   margin-top: 20px;
 }
@@ -80,7 +81,8 @@
   background: #3b4a62;
 }
 
-.login-page form button:active, .login-page form button:hover {
+.login-page form button:active,
+.login-page form button:hover {
   background: #283242;
 }
 
@@ -89,7 +91,7 @@
 }
 
 @media only screen and (max-width: 1200px) {
-  .login-page .white-panel .row > div:first-child {
+  .login-page .white-panel .row>div:first-child {
     border-right: none;
   }
 }
@@ -98,10 +100,11 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -118,9 +121,12 @@ html, body {
 .core-container {
   padding: 20px;
 }
-.map { 
+
+.map {
   width: 800px;
-  height: 500px; 
+  height: 500px;
 }
+
+
 
 /*# sourceMappingURL=app.css.map */
