--- a/Admin_panel/src/views/pages/login/login.hbs
+++ b/Admin_panel/src/views/pages/login/login.hbs
@@ -23,7 +23,7 @@
            		   		<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
-           		   		<h5>Email</h5>
+           		   		<h5 style="margin-top: -10px;">Email</h5>
            		   		<input type="email" name="email" class="input" required>
            		   </div>
            		</div>
