--- a/Admin_panel/src/views/partials/navbar.hbs
+++ b/Admin_panel/src/views/partials/navbar.hbs
@@ -18,17 +18,17 @@
     <ul class="c-header-nav ml-auto mr-4">
        
         <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="#">
-                <h4>User</h4>
+               
             </a></li>
         <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button"
                 aria-haspopup="true" aria-expanded="false">
-                <div class="c-avatar"><img class="c-avatar-img" src="/coreui/assets/img/avatars/6.jpg" alt="user@email.com">
+                <div class="c-avatar"><img class="c-avatar-img" src="https://www.tenforums.com/geek/gars/images/2/types/thumb_15951118880user.png" alt="user@email.com">
                 </div>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
                 
                 <a class="dropdown-item"
-                    href="#">
+                    href="/profile">
                     <svg class="c-icon mr-2">
                         <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-user"></use>
                     </svg> Profile</a>
