--- a/Admin_panel/src/views/partials/sidenavbar.hbs
+++ b/Admin_panel/src/views/partials/sidenavbar.hbs
@@ -17,14 +17,7 @@
                 <svg class="c-sidebar-nav-icon">
                     <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-star"></use>
                 </svg> Events</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/staff">
-                <svg class="c-sidebar-nav-icon">
-                    <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-puzzle"></use>
-                </svg> Actions</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/contactus">
-                <svg class="c-sidebar-nav-icon">
-                    <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-cursor"></use>
-                </svg> Contact us</a></li>
+        <li class="c-sidebar-nav-item">
 
 
     </ul>
