--- a/Admin_panel/src/views/partials/navbar.hbs
+++ b/Admin_panel/src/views/partials/navbar.hbs
@@ -14,12 +14,13 @@
             <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
         </svg>
     </button>
-    
+    <h2 style="padding-left:700px; padding-top:10px">برك سليمان</h2>
     <ul class="c-header-nav ml-auto mr-4">
-       
-        <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="#">
-               
-            </a></li>
+            
+        <li class="c-header-nav-item d-md-down-none mx-2">
+            <a class="c-header-nav-link" href="#">
+              
+            </a</li>
         <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button"
                 aria-haspopup="true" aria-expanded="false">
                 <div class="c-avatar"><img class="c-avatar-img" src="https://www.tenforums.com/geek/gars/images/2/types/thumb_15951118880user.png" alt="user@email.com">
