--- a/Admin_panel/src/views/partials/navbar.hbs
+++ b/Admin_panel/src/views/partials/navbar.hbs
@@ -14,7 +14,7 @@
             <use xlink:href="/coreui/vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
         </svg>
     </button>
-    <h2 style="padding-left:700px; padding-top:10px">برك سليمان</h2>
+    <h2 style="padding-left:700px; padding-top:10px">SOLOMON'S POOLS</h2>
     <ul class="c-header-nav ml-auto mr-4">
             
         <li class="c-header-nav-item d-md-down-none mx-2">
